2004-10-16  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: gimp, gimp-libgimp, gimp-plug-ins,
	gimp-script-fu, gimp-tips are back on HEAD.

2004-10-15  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-control-center has been branched.

2004-10-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: The gedit branch was accidentally named
	'gedit-2-8' instead of 'gnome-2-8'; making the appropriate correction
	in the translation status pages.

2004-10-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gedit has been branched.

2004-10-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: metacity has been branched.

2004-10-11  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: gnome-panel has been branched.

2004-10-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: file-roller has been branched.

2004-10-05  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added contact-lookup-applet to extras.

2004-10-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Tried to add a gnome-2.10 release
	section.

2004-09-29  Abel Cheung  <maddog@linuxhall.org>

	* translation-status.xml: Remove atomix, author stated clearly in
	  website that no future version will be released.

2004-09-26  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed the epiphany-extensions branch.

2004-09-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libbonobo and
	libbonoboui have been branched.

2004-09-23  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gparted to extras.

2004-09-19  Abel Cheung  <maddog@linuxhall.org>

	* translation-status.xml: Fix epiphany-extensions pot name.

2004-09-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: file-roller has been branched.

2004-09-17  Danilo Šegan  <dsegan@gmx.net>
