@@ -2684,6 +2684,17 @@
       </component>
     </version>
   </module>
+  <module name="tomboy">
+    <version release="gnome-2.10">
+      <component name="tomboy" dir="tomboy" group="extras">
+        <podir dir="po"/>
+	<potname name="tomboy.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="totem">
     <version release="gnome-2.10">
       <component name="totem" dir="totem" group="fifth-toe">
