@@ -1,3 +1,7 @@
+2004-10-20  Danilo Šegan  <dsegan@gmx.net>
+
+	* translation-status.xml: Added tomboy.
+
 2004-10-16  Danilo Šegan  <dsegan@gmx.net>
 
 	* translation-status.xml: gimp, gimp-libgimp, gimp-plug-ins,
